--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -1,7 +1,18 @@
 .menu {
     display: flex;
+    align-items: center;
+    height: 100%;
 
-    @media (min-width: 740px) {
+    @media (min-width: 750px) {
         display: none;
+    }
+
+    ul {
+        margin: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center
     }
 }
