--- a/src/components/menuToggleButton.module.scss
+++ b/src/components/menuToggleButton.module.scss
@@ -12,15 +12,19 @@
     transition: 0.5s ease-in-out;
     cursor: pointer;
     border: none;
-    background-color: transparent;
-  }
+	background-color: transparent;
+	
+	@media (min-width: 750px) {
+        display: none;
+    }
+}
   
-  .toggle-button span {
+.toggle-button span {
     display: block;
     position: absolute;
     height: 2px;
     width: 100%;
-    background-color: white;
+    background-color: black;
     border-radius: 9px;
     left: 0;
     -webkit-transform: rotate(0deg);
@@ -31,65 +35,65 @@
     -moz-transition: 0.25s ease-in-out;
     -o-transition: 0.25s ease-in-out;
     transition: 0.25s ease-in-out;
-  }
+}
   
-  .toggle-button span:nth-child(1) {
+.toggle-button span:nth-child(1) {
     top: 0px;
-  }
+}
   
-  .toggle-button span:nth-child(2),
-  .toggle-button span:nth-child(3) {
+.toggle-button span:nth-child(2),
+.toggle-button span:nth-child(3) {
     top: 6px;
-  }
+}
   
-  .toggle-button span:nth-child(4) {
+.toggle-button span:nth-child(4) {
     top: 12px;
-  }
+}
   
-  .toggle-button.menu-open span:nth-child(1) {
+.toggle-button.menu-open span:nth-child(1) {
     top: 6px;
     width: 0%;
     left: 50%;
-  }
+}
   
-  .toggle-button.menu-open span:nth-child(2) {
+.toggle-button.menu-open span:nth-child(2) {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
-  }
+}
   
-  .toggle-button.menu-open span:nth-child(3) {
+.toggle-button.menu-open span:nth-child(3) {
     -webkit-transform: rotate(-45deg);
     -moz-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);
-  }
+}
   
-  .toggle-button.menu-open span:nth-child(4) {
+.toggle-button.menu-open span:nth-child(4) {
     top: 6px;
     width: 0%;
     left: 50%;
-  }
+}
   
-  .toggle-button:focus {
+.toggle-button:focus {
     outline: none;
-  }
+}
   
-  .toggle-button-line {
+.toggle-button-line {
     width: 20px;
     height: 2px;
     background: black;
-  }
+}
   
-  .menu-open.line-top {
+.menu-open.line-top {
     transform: rotate(45deg);
     transform-origin: top left;
     margin-bottom: 5px;
-  }
+}
   
-  .menu-open.line-bottom {
+.menu-open.line-bottom {
     transform: rotate(-45deg);
     transform-origin: top left;
     margin-top: 5px;
-  }
+}
