--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 50px;
     margin-bottom: 75px;
 
     div {
@@ -20,6 +21,10 @@
         align-items: center;
         list-style-type: none;
         margin-bottom: 0;
+
+        @media (max-width: 750px) {
+            display: none;
+        }
 
         li {
             margin-left: 15px;
