--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -7,7 +7,7 @@
     margin: 1rem 0;
 
     a {
-        background: #f4f4f4;
+        // background: #f4f4f4;
         color: #000000;
         display: block;
         padding: 1rem;
@@ -23,7 +23,7 @@
     }
 
     p {
-        color: #777777;
+        // color: #777777;
         font-size: .8rem;
         font-style: italic;
     }
