--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -10,19 +10,24 @@
         // background: #f4f4f4;
         color: #000000;
         display: block;
-        padding: 1rem;
+        // padding: 1rem;
         text-decoration: none;
+        margin-bottom: 2rem;
     }
 
-    a:hover {
-        background: #e4e4e4;
-    }
+    // a:hover {
+    //     background: #e4e4e4;
+    // }
 
     h2 {
-        margin-bottom: 0;
+        margin-bottom: 0.7rem;
     }
 
     p {
+        margin-bottom: 0.7rem;
+    }
+
+    p:last-child {
         // color: #777777;
         font-size: .8rem;
         font-style: italic;
