--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -1,3 +1,7 @@
+.title {
+    color: inherit;
+}
+
 .date {
     font-style: italic
 }
@@ -10,7 +14,7 @@
         background-image: linear-gradient(
           transparent 0%,
           transparent calc(50% - 8px),
-          rgba(0, 0, 255, 0.25) calc(50% - 9px),
+          rgba(0, 0, 255, 0.25) calc(50% - 8px),
           rgba(0, 0, 255, 0.25) 100%
         );
         background-size: 100% 200%;
@@ -21,7 +25,7 @@
         background-image: linear-gradient(
           transparent 0%,
           transparent calc(50% - 8px),
-          rgba(0, 0, 255, 0.6) calc(50% - 9px),
+          rgba(0, 0, 255, 0.6) calc(50% - 8px),
           rgba(0, 0, 255, 0.6) 100%
         );
         background-position: 0px 100%;
