--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,35 +1,36 @@
 .posts {
     list-style-type: none;
     margin: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .post {
     margin: 1rem 0;
+    width: 42%;
 
     a {
-        // background: #f4f4f4;
-        color: #000000;
+        color: inherit;
         display: block;
-        // padding: 1rem;
         text-decoration: none;
         margin-bottom: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 400px;
+
+        div h2 {
+            margin-bottom: 1rem;
+        }
+
+        div div {
+            margin-bottom: 1rem;
+        }
     }
+}
 
-    // a:hover {
-    //     background: #e4e4e4;
-    // }
-
-    h2 {
-        margin-bottom: 0.7rem;
-    }
-
-    p {
-        margin-bottom: 0.7rem;
-    }
-
-    p:last-child {
-        // color: #777777;
-        font-size: .8rem;
+.date {
+    font-size: .8rem;
         font-style: italic;
-    }
 }
