--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -46,6 +46,7 @@
         font-style: normal;
         font-size: 0.8em;
         width: 100%;
+        margin-top: 0.3rem;
         margin-bottom: 1.5rem;
     }
 }
