--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -19,7 +19,7 @@
         justify-content: space-between;
 
         h2 {
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
         }
     }
 
@@ -54,7 +54,10 @@
 }
 
 .description-date-div {
-    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 1.5rem;
 
     @media only screen and (max-width: 600px) {
         margin-left: 0;
