--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -19,7 +19,7 @@
         justify-content: space-between;
 
         h2 {
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
         }
     }
 
@@ -35,14 +35,11 @@
 .date {
     font-size: .8rem;
     font-style: italic;
+    margin-bottom: 1rem;
 }
 
 .image-container {
-    min-width: 175px;
-
-    @media only screen and (max-width: 600px) {
-        margin-bottom: 1.5rem;
-    }
+    min-width: 215px;
 }
 
 .flex-container {
@@ -57,9 +54,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 
     @media only screen and (max-width: 600px) {
-        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 1rem;
     }
 }
