--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -12,7 +12,8 @@
 
             p {
                 margin-bottom: 0;
-                font-style: italic;
+                color: rgba(0, 0, 255, 0.6);
+                font-weight: 700;
             }
         }
     }
@@ -30,19 +31,6 @@
         li {
             margin-left: 20px;
             margin-bottom: 0;
-
-            // div:first-child {
-            //     position: relative;
-            //     top: -3px;
-            //     left: -3px;
-
-            //     div:first-child {
-            //         position: absolute;
-            //         width: 12px;
-            //         height: 12px;
-            //         background-color: rgba(0, 0, 255, 0.25);
-            //     }
-            // }
 
             a {
                 text-decoration: none;
