--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -33,8 +33,8 @@
 }
 
 .date {
-    font-size: .8rem;
-    font-style: italic;
+    color: rgba(0, 0, 255, 0.6);
+    font-weight: 700;
     margin-bottom: 1rem;
 }
 
