add reading time

--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -2,7 +2,8 @@
     color: inherit;
 }
 
-.date {
+.date-and-reading-time-div {
+    display: flex;
     color: rgba(0, 0, 255, 0.6);
     font-weight: 700;
 }
