--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -32,10 +32,10 @@
     }
 }
 
-.date {
+.date-and-reading-time-div {
+    display: flex;
     color: rgba(0, 0, 255, 0.6);
     font-weight: 700;
-    margin-bottom: 1rem;
 }
 
 .image-container {
