--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -26,8 +26,8 @@
     &:hover {
         transition: 0.3s;
 
-        h2 {
-            text-decoration: underline;
+        .title-squared-div, .date-rectangular-div {
+            background-color: rgba(0, 0, 255, 0.6);
         }
     }
 }
@@ -59,5 +59,16 @@
     @media only screen and (max-width: 600px) {
         margin-right: 0;
         margin-bottom: 1rem;
+    }
+}
+
+.title-squared-div, .date-rectangular-div {
+    width: 43px;
+    height: 43px;
+    background-color: rgba(0, 0, 255, 0.25);
+
+    @media only screen and (max-width: 480px) {
+        width: 40px;
+        height: 40px;
     }
 }
