--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -36,7 +36,7 @@
                 text-decoration: none;
                 color: inherit;
                 padding: 6px;
-                border-radius: 3px;
+                // border-radius: 3px;
             }
 
             a:hover {
