--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 /* Reset provided by https://github.com/gatsbyjs/gatsby-starter-blog via MIT license */
 
 html {
-    font-family: Lora, sans-serif;
+    font-family: rubik, sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
   }
@@ -202,7 +202,7 @@ html {
   }
   body {
     color: hsla(0, 0%, 0%, 0.8);
-    font-family: Lora, -apple-system, sans-serif;
+    font-family: rubik, -apple-system, sans-serif;
     font-weight: normal;
     word-wrap: break-word;
     font-kerning: normal;
@@ -232,7 +232,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -249,7 +249,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -266,7 +266,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -283,7 +283,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -300,7 +300,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -317,7 +317,7 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: Lora, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: rubik, -apple-system, BlinkMacSystemFont, Segoe UI, rubik, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -594,7 +594,7 @@ html {
   code {
     background-color: hsla(0, 0%, 0%, 0.04);
     border-radius: 3px;
-    font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
+    font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
       "Liberation Mono", Menlo, Courier, monospace;
     padding: 0;
     padding-top: 0.2em;
