--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -6,6 +6,7 @@
     margin-bottom: 75px;
     max-width: 714px;
     width: 100%;
+    font-weight: 700;
 
     div {
         a {
@@ -14,9 +15,8 @@
 
             p {
                 margin-bottom: 0;
-                // color: rgba(0, 0, 255, 0.65);
-                font-weight: 700;
-                text-transform: uppercase;
+                // font-weight: 700;
+                // text-transform: uppercase;
             }
         }
     }
