--- a/src/components/menuItem.module.scss
+++ b/src/components/menuItem.module.scss
@@ -1,6 +1,7 @@
 .link {
     text-decoration: none;
-    font-size: 1.62671rem;
-    padding: 20px;
+    // font-size: 1.62671rem;
+    // padding: 20px;
     color: inherit;
+    // font-weight: 700;
 }
