--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -599,6 +599,7 @@ html {
     border-radius: 3px;
     font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
       "Liberation Mono", Menlo, Courier, monospace;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
