--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,12 +1,12 @@
 .container {
-    margin: 0 auto;
-    max-width: 750px;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    align-items: center;
+    width: 100%;
 }
 
-.content {
-    flex-grow: 1;
+.header {
+    width: 100%;
+    max-width: 1010px;
+    padding: 1rem;
 }
