--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,3 +1,9 @@
+.container {
+    max-width: 750px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
 .title {
     margin-bottom: 1.5rem;
 }
