--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -1,3 +1,13 @@
+.container {
+    max-width: 750px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+
+    @media only screen and (max-width: 750px) {
+        max-width: 100%;
+    }
+}
+
 .title {
     color: inherit;
 }
