--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -5,8 +5,25 @@
     width: 100%;
 }
 
+.headerContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 75px;
+    // background-color: rgb(245, 242, 240);
+    background-color: rgba(0, 0, 255, 0.05);
+    // background-color: rgba(0, 0, 255, 0.65);
+
+    &.isOpen {
+        background-color: white;
+    }
+}
+
 .header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
     max-width: 1010px;
-    padding: 1rem;
 }
