--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -1,5 +1,6 @@
 .menu {
-    height: 100%;
+    height: 50px;
+    margin-top: 91px; // 75 + 16
 
     @media (min-width: 750px) {
         display: none;
