--- a/src/components/menuToggleButton.module.scss
+++ b/src/components/menuToggleButton.module.scss
@@ -1,6 +1,6 @@
 .toggle-button {
-    width: 20px;
-    height: 15px;
+    width: 32px;
+    height: 25px;
     position: relative;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -22,10 +22,11 @@
 .toggle-button span {
     display: block;
     position: absolute;
-    height: 2px;
+    height: 5px;
     width: 100%;
-    background-color: black;
-    border-radius: 9px;
+    // background-color: black;
+    background-color: rgb(50, 50, 50);
+    border-radius: 15px;
     left: 0;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -43,15 +44,15 @@
   
 .toggle-button span:nth-child(2),
 .toggle-button span:nth-child(3) {
-    top: 6px;
+    top: 10px;
 }
   
 .toggle-button span:nth-child(4) {
-    top: 12px;
+    top: 20px;
 }
   
 .toggle-button.menu-open span:nth-child(1) {
-    top: 6px;
+    top: 10px;
     width: 0%;
     left: 50%;
 }
@@ -71,7 +72,7 @@
 }
   
 .toggle-button.menu-open span:nth-child(4) {
-    top: 6px;
+    top: 10px;
     width: 0%;
     left: 50%;
 }
