--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -55,7 +55,8 @@
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: #f5f2f0;
+     /* background: #f5f2f0; */
+     background: #f0f0f0;
  }
  
  /* Inline code */
