--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -187,7 +187,8 @@ html {
     font: inherit;
   }
   html {
-    font: 112.5%/1.65em georgia, serif;
+    // font: 112.5%/1.65em georgia, serif;
+    font: 125%/1.65em georgia, serif;
     box-sizing: border-box;
     overflow-y: scroll;
   }
@@ -236,7 +237,8 @@ html {
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
-    font-size: 2.25rem;
+    // font-size: 2.25rem;
+    font-size: 3rem;
     line-height: 1.1;
   }
   h2 {
@@ -594,7 +596,8 @@ html {
   tt,
   code {
     // background-color: hsla(0, 0%, 0%, 0.04);
-    background-color: #f5f2f0;
+    // background-color: #f5f2f0;
+    background: #f0f0f0;
     color: black;
     border-radius: 3px;
     font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
