--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -9,9 +9,12 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 1rem;
+    padding: 0.3rem 1rem;
     margin-bottom: 75px;
-    background-color: rgba(0, 0, 255, 0.05);
+    // background-color: rgba(0, 0, 255, 0.05);
+    // box-shadow: 1px -1px 7px 0 rgba(0, 0, 255, 0.25);
+    background-color: rgba(0, 0, 255, 0.65);
+    box-shadow: 1px -1px 10px 0 rgba(0, 0, 255, 0.25);
 
     &.isOpen {
         background-color: white;
@@ -19,6 +22,8 @@
 
     @media (max-width: 750px) {
         background-color: white;
+        box-shadow: none;
+        padding: 1rem;
     }
 }
 
@@ -27,5 +32,5 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 1010px;
+    max-width: 1164px; // 1200 - 16 - 16
 }
