--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -3,6 +3,10 @@
     padding-left: 1rem;
     padding-right: 1rem;
 
+    // h1 {
+    //     text-align: center;
+    // }
+
     @media only screen and (max-width: 750px) {
         max-width: 100%;
     }
@@ -14,6 +18,7 @@
 
 .date-and-reading-time-div {
     display: flex;
+    // justify-content: center;
     color: rgba(0, 0, 255, 0.65);
     font-weight: 700;
 }
