--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -15,6 +15,7 @@
             text-decoration: none;
             // color: inherit;
             color: white;
+            font-weight: 700;
 
             @media (max-width: 750px) {
                 color: inherit;
