--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -30,6 +30,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        box-shadow: none;
 
         h2 {
             margin-bottom: 1rem;
@@ -37,7 +38,8 @@
     }
 
     &:hover {
-        transition: all 0.3s ease-in;
+        // transition: all 0.3s ease-in;
+        transition: 0.3s;
         
         .image {
             box-shadow: 1px -1px 10px 0 rgba(0, 0, 0, 0.25);
@@ -63,7 +65,7 @@
 
 .image {
     border-radius: 10px;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.25);
+    box-shadow: none;
 }
 
 .flex-container {
