--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -606,10 +606,9 @@ html {
     // color: #07a;
     color: rgba(0, 0, 255, 0.65);
     border-radius: 3px;
-    // font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
-    //   "Liberation Mono", Menlo, Courier, monospace;
-    // font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    font-family: Menlo, Monaco, Consolas, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
+      "Liberation Mono", Menlo, Courier, monospace;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
