--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -9,8 +9,7 @@
      color: black;
      background: none;
      text-shadow: 0 1px white;
-     /* font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace; */
-     font-family: Menlo, Monaco, Consolas, 'Andale Mono', 'Ubuntu Mono', monospace;
+     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
