--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -7,6 +7,7 @@
  code[class*="language-"],
  pre[class*="language-"] {
      color: black;
+     font-weight: normal;
      background: none;
      text-shadow: 0 1px white;
      font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -57,7 +58,14 @@
  pre[class*="language-"] {
      /* background: #f5f2f0; */
      background: #f0f0f0;
+     border-radius: 20px;
  }
+
+ @media only screen and (max-width: 750px) {
+    pre[class*="language-"] {
+        border-radius: 10px;
+    }
+}
  
  /* Inline code */
  :not(pre) > code[class*="language-"] {
@@ -113,11 +121,14 @@
  .token.attr-value,
  .token.keyword {
      color: #07a;
+     font-weight: 700;
      /* color: rgba(0, 0, 255, 0.65); */
  }
  
- .token.function {
+ .token.function,
+ .token.class-name {
      color: #DD4A68;
+     font-weight: 700;
  }
  
  .token.regex,
