--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -2,10 +2,7 @@
     max-width: 750px;
     padding-left: 1rem;
     padding-right: 1rem;
-
-    // h1 {
-    //     text-align: center;
-    // }
+    margin-bottom: 5rem;
 
     @media only screen and (max-width: 750px) {
         max-width: 100%;
@@ -18,7 +15,6 @@
 
 .date-and-reading-time-div {
     display: flex;
-    // justify-content: center;
     color: rgba(0, 0, 255, 0.65);
     font-weight: 700;
 }
@@ -34,13 +30,13 @@
 .blog {
     a {
         color: inherit;
-        padding: 2px;
+        padding: 4px;
         text-decoration: none;
         background-image: linear-gradient(
           transparent 0%,
-          transparent calc(50% - 8px),
-          rgba(0, 0, 255, 0.25) calc(50% - 8px),
-          rgba(0, 0, 255, 0.25) 100%
+          transparent calc(50% - 3px),
+          rgba(0, 0, 255, 0.65) calc(50% - 3px),
+          rgba(0, 0, 255, 0.65) 100%
         );
         background-size: 100% 200%;
     }
@@ -49,8 +45,8 @@
         color: white;
         background-image: linear-gradient(
           transparent 0%,
-          transparent calc(50% - 8px),
-          rgba(0, 0, 255, 0.65) calc(50% - 8px),
+          transparent calc(50% - 3px),
+          rgba(0, 0, 255, 0.65) calc(50% - 3px),
           rgba(0, 0, 255, 0.65) 100%
         );
         background-position: 0px 100%;
