--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -47,7 +47,7 @@
     
     a {
         color: inherit;
-        padding: 4px;
+        padding: 4px 2px;
         text-decoration: none;
         background-image: linear-gradient(
           transparent 0%,
