--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -256,7 +256,7 @@ html {
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 1.62671rem;
-    line-height: 1.1;
+    line-height: 1.5;
 
     code {
       font-size: 1.62671rem;
@@ -450,6 +450,7 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
+    font-style: italic;
   }
   form {
     margin-left: 0;
