--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -30,7 +30,7 @@
 .blog {
     a {
         color: inherit;
-        padding: 4px;
+        padding: 4px 2px;
         text-decoration: none;
         background-image: linear-gradient(
           transparent 0%,
