--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 1100px;
+    max-width: 1000px;
     padding-left: 1rem;
     padding-right: 1rem;
 }
@@ -40,9 +40,10 @@
     width: 47%;
     margin-left: 1.5rem;
 
-    @media only screen and (max-width: 900px) {
-        width: 100%;
-        margin-left: 0;
+    p {
+        margin-bottom: 0.85rem;
+        font-size: 16px;
+        line-height: 1.5;
     }
     
     a {
@@ -71,6 +72,11 @@
     }
 
     @media only screen and (max-width: 600px) {
+        margin-left: 0;
+    }
+
+    @media only screen and (max-width: 900px) {
+        width: 100%;
         margin-left: 0;
     }
 }
