--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ html {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    // background-color: #f6f9fc;
   }
   article,
   aside,
@@ -237,8 +238,8 @@ html {
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
-    // font-size: 2.25rem;
-    font-size: 2.6rem;
+    font-size: 2.25rem;
+    // font-size: 2.6rem;
     line-height: 1.1;
   }
   h2 {
@@ -539,9 +540,9 @@ html {
   blockquote *:last-child {
     margin-bottom: 0;
   }
-  li *:last-child {
-    margin-bottom: 0;
-  }
+  // li *:last-child {
+  //   margin-bottom: 0;
+  // }
   p *:last-child {
     margin-bottom: 0;
   }
@@ -607,11 +608,12 @@ html {
     // color: #07a;
     color: rgba(0, 0, 255, 0.65);
     // border-radius: 3px;
-    border-radius: 20px;
+    // border-radius: 20px;
+    border-radius: 8px;
 
-    @media only screen and (max-width: 750px) {
-      border-radius: 10px;
-    }
+    // @media only screen and (max-width: 750px) {
+    //   border-radius: 10px;
+    // }
     
     font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
       "Liberation Mono", Menlo, Courier, monospace;
