--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -58,7 +58,8 @@
  pre[class*="language-"] {
      /* background: #f5f2f0; */
      background: #f0f0f0;
-     border-radius: 20px;
+     /* border-radius: 20px; */
+     border-radius: 8px;
  }
 
  @media only screen and (max-width: 750px) {
