--- a/src/components/menu.module.scss
+++ b/src/components/menu.module.scss
@@ -1,9 +1,10 @@
 .menu {
+    display: none;
     height: 50px;
     margin-top: 66px; // 50 + 16
 
-    @media (min-width: 750px) {
-        display: none;
+    @media (max-width: 750px) {
+        display: block;
     }
 
     ul {
