--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -35,7 +35,6 @@
             margin-bottom: 0.85rem;
             font-size: 1.4rem;
             line-height: 1.2;
-            // color: rgba(0, 0, 255, 0.65);
         }
 
         > p {
@@ -60,12 +59,12 @@
 
 .date-and-reading-time-div {
     display: flex;
-    color: rgba(0, 0, 255, 0.65);
-    font-weight: 700;
-    font-size: 16px;
+    // color: rgba(0, 0, 255, 0.65);
+    // font-weight: 700;
+    font-size: 14px;
 
     > p {
-        margin-bottom: 0.85rem;
+        margin-bottom: 0.5rem;
     }
 }
 
@@ -108,14 +107,13 @@
     flex-wrap: wrap;
 
     li {
-        // color: rgba(0, 0, 255, 0.65);
-        // font-weight: 700;
         font-size: 14px;
         margin-right: 0.7rem;
         white-space: nowrap;
         padding: 3px 10px;
         background-color: #f0f0f0;
-        border-radius: 8px;
+        border-radius: 4px;
+        border: 1px solid rgba(0, 0, 0, 0.05);
         line-height: 2.1em;
 
         &:hover {
