--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -601,31 +601,23 @@ html {
   }
   tt,
   code {
-    // background-color: hsla(0, 0%, 0%, 0.04);
-    // background-color: #f5f2f0;
     background: #f0f0f0;
-    // color: black;
-    // color: #07a;
     color: rgba(0, 0, 255, 0.65);
-    // border-radius: 3px;
-    // border-radius: 20px;
-    border-radius: 8px;
-
-    // @media only screen and (max-width: 750px) {
-    //   border-radius: 10px;
-    // }
-    
+    border-radius: 4px;
+    // border: 1px solid rgba(0, 0, 0, 0.05);  
     font-family: "SFMono-Regular", Consolas, "rubik Mono", "Droid Sans Mono",
       "Liberation Mono", Menlo, Courier, monospace;
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    padding: 0;
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
+    // padding: 0;
+    // padding-top: 0.2em;
+    // padding-bottom: 0.2em;
+    padding: 3px 8px;
     font-weight: 700;
   }
   pre code {
     background: none;
     line-height: 1.42;
+    border: none;
   }
   // code:before,
   // code:after,
@@ -640,10 +632,10 @@ html {
   // pre tt:after {
   //   content: "";
   // }
-  code {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-  }
+  // code {
+  //   padding-left: 0.5em;
+  //   padding-right: 0.5em;
+  // }
   pre code {
     padding-left: 0;
     padding-right: 0;
