--- a/src/styles/prism-modified.css
+++ b/src/styles/prism-modified.css
@@ -59,7 +59,8 @@
      /* background: #f5f2f0; */
      background: #f0f0f0;
      /* border-radius: 20px; */
-     border-radius: 8px;
+     border-radius: 4px;
+     border: 1px solid rgba(0, 0, 0, 0.05);
  }
 
  @media only screen and (max-width: 750px) {
