--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -4,6 +4,10 @@
     padding-right: 1rem;
     margin-bottom: 5rem;
 
+    h1 {
+        margin-bottom: 0.8rem;
+    }
+
     @media only screen and (max-width: 750px) {
         max-width: 100%;
     }
@@ -15,8 +19,15 @@
 
 .date-and-reading-time-div {
     display: flex;
-    color: rgba(0, 0, 255, 0.65);
-    font-weight: 700;
+    // color: rgba(0, 0, 255, 0.65);
+    // font-weight: 700;
+    margin-bottom: 1.2rem;
+    width: fit-content;
+    font-size: 0.8em;
+
+    & > p {
+        margin-bottom: 0;
+    }
 }
 
 .image {
@@ -30,12 +41,15 @@
 .blog {
     a {
         color: inherit;
-        padding: 4px 2px;
+        color: rgba(0, 0, 255, 0.65);
+        font-weight: 700;
+        // padding: 4px 2px;
+        padding: 3px 5px;
         text-decoration: none;
         background-image: linear-gradient(
           transparent 0%,
-          transparent calc(50% - 4px),
-          rgba(0, 0, 255, 0.65) calc(50% - 4px),
+          transparent calc(50% - 2px),
+          rgba(0, 0, 255, 0.65) calc(50% - 2px),
           rgba(0, 0, 255, 0.65) 100%
         );
         background-size: 100% 200%;
@@ -45,8 +59,8 @@
         color: white;
         background-image: linear-gradient(
           transparent 0%,
-          transparent calc(50% - 4px),
-          rgba(0, 0, 255, 0.65) calc(50% - 4px),
+          transparent calc(50% - 2px),
+          rgba(0, 0, 255, 0.65) calc(50% - 2px),
           rgba(0, 0, 255, 0.65) 100%
         );
         background-position: 0px 100%;
