--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -30,5 +30,6 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 964px; // 1000 - 16 - 16
+    // max-width: 964px; // 1000 - 16 - 16
+    max-width: 718px; // 750 - 16 - 16
 }
