--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,5 +1,5 @@
 .container {
-    max-width: 1000px;
+    max-width: 750px;
     padding-left: 1rem;
     padding-right: 1rem;
 }
@@ -114,7 +114,8 @@
         background-color: #f0f0f0;
         border-radius: 4px;
         border: 1px solid rgba(0, 0, 0, 0.05);
-        line-height: 2.1em;
+        line-height: 1.8em;
+        padding: 3px 8px;
 
         &:hover {
             transition: 0.3s;
