--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -13,9 +13,9 @@
     div {
         a {
             text-decoration: none;
-            // color: inherit;
+            color: inherit;
             color: white;
-            // font-weight: 700;
+            // font-size: 16px;
 
             @media (max-width: 750px) {
                 color: inherit;
@@ -48,15 +48,16 @@
 
             a {
                 text-decoration: none;
-                // color: inherit;
+                color: inherit;
                 color: white;
                 padding: 6px;
                 border-radius: 3px;
+                // font-size: 16px;
             }
 
             a:hover {
-                // background-color: rgba(0, 0, 255, 0.65);
-                color: white !important;
+                // background-color: rgba(0, 40, 150, 0.65);
+                // color: white !important;
                 font-weight: 700;
                 transition: 0.3s;
             }
@@ -65,7 +66,7 @@
 }
 
 .active-nav-item {
-    // background-color: rgba(0, 0, 255, 0.65);
-    color: white !important;
+    // background-color: rgba(0, 40, 150, 0.65);
+    // color: white !important;
     font-weight: 700;
 }
