--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -34,7 +34,9 @@
         h2 {
             margin-bottom: 0.85rem;
             font-size: 1.4rem;
+            // font-size: 16px;
             line-height: 1.2;
+            color: rgba(0, 40, 150, 0.65);
         }
 
         > p {
@@ -59,7 +61,7 @@
 
 .date-and-reading-time-div {
     display: flex;
-    // color: rgba(0, 0, 255, 0.65);
+    // color: rgba(0, 40, 150, 0.65);
     // font-weight: 700;
     font-size: 14px;
 
@@ -121,7 +123,7 @@
             transition: 0.3s;
             cursor: pointer;
             color: white;
-            background-color: rgba(0, 0, 255, 0.65);
+            background-color: rgba(0, 40, 150, 0.65);
         }
     }
 }
