--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -39,6 +39,7 @@
             margin-bottom: 0.85rem;
             font-size: 1.4rem;
             line-height: 1.2;
+            // color: rgba(0, 40, 120, 0.65);
         }
 
         > p {
