--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,6 +1,6 @@
 .container {
-    min-width: 750px;
-    max-width: 750px;
+    // min-width: 1000px;
+    max-width: 1000px;
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 16px;
