--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -32,13 +32,13 @@
 
     p {
         margin-bottom: 0.85rem;
+        // font-size: 16px;
     }
     
     a {
         color: inherit;
         color: rgba(0, 40, 120, 0.65);
         font-weight: 700;
-        // padding: 4px 2px;
         padding: 3px 5px;
         text-decoration: none;
         background-image: linear-gradient(
