--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -1,64 +1,65 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  font-size: 18px;
+
+  @media (max-width: 750px) {
     height: 40px;
-    width: 100%;
+  }
+
+  div {
+    a {
+      text-decoration: none;
+      color: white;
+
+      @media (max-width: 750px) {
+        color: inherit;
+        font-weight: 700;
+      }
+
+      // &:hover {
+      //     font-weight: 700;
+      // }
+    }
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    margin-bottom: 0;
 
     @media (max-width: 750px) {
-        height: 40px;
+      display: none;
     }
 
-    div {
-        a {
-            text-decoration: none;
-            color: white;
+    li {
+      margin-left: 20px;
+      margin-bottom: 0;
 
-            @media (max-width: 750px) {
-                color: inherit;
-                font-weight: 700;
-            }
+      a {
+        text-decoration: none;
+        color: inherit;
+        color: white;
+        padding: 6px;
+        border-radius: 3px;
+      }
 
-            &:hover {
-                font-weight: 700;
-            }
-        }
+      a:hover {
+        // background-color: rgb(75, 110, 153);
+        // color: white !important;
+        font-weight: 700;
+        // transition: 0.3s;
+      }
     }
-
-    ul {
-        display: flex;
-        align-items: center;
-        list-style-type: none;
-        margin-bottom: 0;
-
-        @media (max-width: 750px) {
-            display: none;
-        }
-
-        li {
-            margin-left: 20px;
-            margin-bottom: 0;
-
-            a {
-                text-decoration: none;
-                color: inherit;
-                color: white;
-                padding: 6px;
-                border-radius: 3px;
-            }
-
-            a:hover {
-                // background-color: rgba(0, 40, 120, 0.65);
-                // color: white !important;
-                font-weight: 700;
-                transition: 0.3s;
-            }
-        }
-    }
+  }
 }
 
 .active-nav-item {
-    // background-color: rgba(0, 40, 120, 0.65);
-    // color: white !important;
-    font-weight: 700;
+  // background-color: rgb(75, 110, 153);
+  // color: white !important;
+  font-weight: 700;
 }
