--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -1,125 +1,140 @@
 .container {
-    max-width: 1000px;
-    padding-left: 1rem;
-    padding-right: 1rem;
+  max-width: 750px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-bottom: 80px;
 }
 
 .posts {
-    list-style-type: none;
-    margin: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
+  list-style-type: none;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .post {
-    width: 47%;
-    margin: 0;
-    margin-bottom: 5rem;
+  margin: 0;
+  display: flex;
+  padding: 16px 0 48px 0;
+  border-top: 1px solid rgb(235, 235, 235);
 
-    @media only screen and (max-width: 750px) {
-        width: 100%;
+  @media only screen and (max-width: 750px) {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  a {
+    color: inherit;
+    display: block;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    box-shadow: none;
+
+    h2 {
+      margin-bottom: 0.85rem;
+      font-size: 24px;
+      line-height: 1.2;
     }
 
-    a {
-        color: inherit;
-        display: block;
-        text-decoration: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        box-shadow: none;
-
-        h2 {
-            margin-bottom: 0.85rem;
-            font-size: 1.4rem;
-            line-height: 1.2;
-        }
-
-        > p {
-            margin-bottom: 0.85rem;
-            font-size: 16px;
-            line-height: 1.5;
-        }
-
-        &:hover {
-            transition: 0.3s;
-
-            .image {
-                box-shadow: 1px -1px 10px 0 rgba(0, 0, 0, 0.25);
-            }
-
-            h2 {
-                text-decoration: underline;
-            }
-        }
+    > p {
+      margin-bottom: 0.85rem;
+      font-size: 18px;
+      color: rgb(110, 110, 110);
+      line-height: 1.5;
+      line-height: 1.7em;
     }
+
+    &:hover {
+      transition: 0.3s;
+
+      // .image {
+      //     box-shadow: 1px -1px 10px 0 rgba(0, 0, 0, 0.25);
+      // }
+
+      h2 {
+        color: rgb(110, 110, 110);
+      }
+    }
+  }
 }
 
 .date-and-reading-time-div {
-    display: flex;
-    font-size: 16px;
-    line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  min-width: 135px;
+  margin-right: 24px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: rgb(110, 110, 110);
 
-    > p {
-        margin-bottom: 0.5rem;
-    }
+  > p {
+    margin-bottom: 0.5rem;
+  }
+
+  @media only screen and (max-width: 750px) {
+    margin-right: 0;
+  }
 }
 
 .image-container {
+  margin-top: 0.5rem;
+
+  @media only screen and (max-width: 750px) {
     margin-bottom: 0.85rem;
+  }
 }
 
 .image {
-    border-radius: 10px;
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .description-date-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.title-squared-div, .date-rectangular-div {
-    width: 43px;
-    height: 43px;
-    background-color: rgba(0, 0, 255, 0.25);
+.title-squared-div,
+.date-rectangular-div {
+  width: 43px;
+  height: 43px;
+  background-color: rgba(0, 0, 255, 0.25);
 
-    @media only screen and (max-width: 480px) {
-        width: 40px;
-        height: 40px;
-    }
+  @media only screen and (max-width: 750px) {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .tags {
-    list-style: none;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
 
-    li {
-        font-size: 14px;
-        margin-right: 0.7rem;
-        white-space: nowrap;
-        padding: 3px 10px;
-        background-color: #f0f0f0;
-        border-radius: 4px;
-        border: 1px solid rgba(0, 0, 0, 0.05);
-        line-height: 1.8em;
-        padding: 3px 8px;
+  li {
+    font-size: 14px;
+    margin-right: 0.7rem;
+    white-space: nowrap;
+    padding: 3px 10px;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    line-height: 1.8em;
+    padding: 3px 8px;
 
-        &:hover {
-            transition: 0.3s;
-            cursor: pointer;
-            color: white;
-            background-color: rgba(0, 40, 120, 0.65);
-        }
+    &:hover {
+      transition: 0.3s;
+      cursor: pointer;
+      color: white;
+      background-color: rgb(75, 110, 153);
     }
+  }
 }
