add follow me on twitter button

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -31,6 +31,8 @@
     // border-radius: 5px;
     font-size: 18px;
     padding: 13px 16px;
+    width: 220px;
+    margin-bottom: 10px;
 
     &:hover {
       //   transition: 0.3s;
