--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -1,8 +1,11 @@
 .container {
-    // max-width: 1000px;
     max-width: 750px;
     padding-left: 1rem;
     padding-right: 1rem;
+
+    h1 {
+        color: var(--text-primary);
+    }
 }
 
 p,
@@ -19,16 +22,11 @@ code {
 }
 
 .image-container {
-    // width: 47%;
     margin-bottom: 1.5rem;
 
     @media only screen and (max-width: 750px) {
         width: 100%;
     }
-
-    // img {
-    //     border-radius: 10px;
-    // }
 }
 
 .flex-div {
@@ -42,7 +40,6 @@ code {
 
     p {
         margin-bottom: 0.85rem;
-        // font-size: 16px;
     }
 
     a {
