--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,4 @@
 .container {
-    // min-width: 1000px;
     max-width: 750px;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -8,26 +7,22 @@
     margin-bottom: 80px;
 
     h1 {
+        color: var(--text-primary);
         margin-bottom: 1.5rem;
-        // color: rgb(75, 110, 153);
     }
 
     p {
         font-size: 18px;
-        color: rgb(110, 110, 110);
-        // color: inherit;
+        color: var(--text-secondary);
         margin-bottom: 1.5rem;
-        // border-top: 1px solid rgb(235, 235, 235);
     }
 
     .link {
         text-decoration: none;
         text-align: center;
         cursor: pointer;
-        // background-color: #6e6e6e;
-        background-color: rgb(75, 110, 153);
-        color: inherit;
-        color: white;
+        color: var(--button-color);
+        background-color: var(--button-background);
         box-shadow: none;
         border-radius: 4px;
         font-size: 18px;
@@ -37,8 +32,7 @@
 
         &:hover {
             transition: 0.3s;
-            //   font-weight: 700;
-            background-color: rgb(47, 82, 126);
+            background-color: var(--button-background-hover);
         }
     }
 
@@ -46,86 +40,18 @@
         text-decoration: none;
 
         h2 {
-            color: rgb(75, 110, 153);
-            color: inherit;
-            color: rgba(0, 0, 0, 0.8);
+            color: var(--text-primary);
         }
 
         &:hover {
             h2 {
-                color: rgb(110, 110, 110);
+                color: var(--text-secondary);
             }
         }
     }
-
-    // a:first-of-type {
-    //     background-color: rgb(75, 110, 153);
-    //     color: white;
-    // }
 
     @media only screen and (max-width: 750px) {
         min-width: auto;
         width: 100%;
     }
 }
-
-// .image-container {
-//   margin-bottom: 0.85rem;
-
-//   @media only screen and (max-width: 750px) {
-//     width: 100%;
-//   }
-// }
-
-// .image {
-//   border-radius: 10px;
-//   box-shadow: none;
-// }
-
-// .flex-div {
-//   display: flex;
-//   justify-content: space-between;
-//   margin-bottom: 5rem;
-
-//   > a {
-//     text-decoration: none;
-//     color: inherit;
-//     width: 47%;
-
-//     h2 {
-//       margin-bottom: 0.85rem;
-//       font-size: 1.4rem;
-//       line-height: 1.2;
-//       // color: rgb(75, 110, 153);
-//     }
-
-//     > p {
-//       margin-bottom: 0.85rem;
-//       font-size: 16px;
-//       line-height: 1.5;
-//     }
-
-//     &:hover {
-//       transition: 0.3s;
-
-//       h2 {
-//         text-decoration: underline;
-//       }
-
-//       transition: 0.3s;
-
-//       .image {
-//         box-shadow: 1px -1px 10px 0 rgba(0, 0, 0, 0.25);
-//       }
-//     }
-//   }
-
-//   @media only screen and (max-width: 750px) {
-//     flex-direction: column;
-
-//     > a {
-//       width: 100%;
-//       margin-bottom: 5rem;
-//     }
-//   }
-// }
