--- a/src/styles/index copy.scss
+++ b/src/styles/index copy.scss
@@ -1,7 +1,5 @@
 /* Reset provided by https://github.com/gatsbyjs/gatsby-starter-blog via MIT license */
 
-@import "./colours.scss";
-
 html {
     font-family: "Inter", sans-serif;
     -ms-text-size-adjust: 100%;
@@ -11,19 +9,8 @@ body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: var(--background);
+    // background-color: #f6f9fc;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    color: var(--text-primary);
-}
-
 article,
 aside,
 details,
