--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -9,7 +9,8 @@ body {
 }
 
 body.dark {
-    --background: rgb(8, 15, 23);
+    --background: rgb(14, 25, 38);
     --text-primary: rgb(221, 225, 228);
     --text-secondary: rgb(182, 189, 195);
+    --border: rgb(77, 80, 81);
 }
