--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -11,9 +11,13 @@
         margin-bottom: 1.5rem;
     }
 
+    h2 {
+        color: var(--text-primary);
+    }
+
     p {
         font-size: 18px;
-        color: var(--text-secondary);
+        // color: var(--text-secondary);
         margin-bottom: 1.5rem;
     }
 
@@ -39,14 +43,9 @@
     .blogLink {
         text-decoration: none;
 
-        h2 {
-            color: var(--text-primary);
-        }
-
         &:hover {
-            h2 {
-                color: var(--text-secondary);
-            }
+            transition: 0.3s;
+            opacity: 0.8;
         }
     }
 
