--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -12,6 +12,16 @@
         margin-bottom: 0.8rem;
     }
 
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p {
+        color: var(--text-primary);
+    }
+
     p:first-of-type {
         color: var(--text-secondary);
     }
