--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -6,7 +6,7 @@ body {
     --button-background: rgb(75, 110, 153);
     --button-background-hover: rgb(47, 82, 126);
     --border: rgb(235, 235, 235);
-    --navbar-height: 80px;
+    --header-height: 80px;
     --border-radius: 8px;
 }
 
