make links bold

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -33,6 +33,7 @@
         padding: 13px 0;
         width: 220px;
         margin-bottom: 10px;
+        font-weight: 700;
 
         &:hover {
             transition: 0.3s;
