amend newsletter layout

--- a/src/components/newsletter.module.scss
+++ b/src/components/newsletter.module.scss
@@ -102,3 +102,9 @@
         display: none;
     }
 }
+
+.newsletterTextContainer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
