keep logo black

--- a/src/components/logo.module.scss
+++ b/src/components/logo.module.scss
@@ -6,6 +6,6 @@
     &:hover {
         transition: 0.3s;
         // fill: var(--text-secondary);
-        fill: var(--text-primary);
+        // fill: var(--text-primary);
     }
 }
